Bug 1586328 - Make Extract take an aNow argument to avoid pushing a blob the very first call. r=bryce

The first call to Extract() comes from MediaEncoderInitialized() and runs before
we dispatch the task to fire "start". With a very small timeslice (even 0), the
first call to Extract() could decide to push a blob, which is against the spec.

With this patch, the caller is in control of what time Extract() thinks "now"
is. This lets the particular call from MediaEncoderInitialized() gather data
into the blob through Extract() without being at risk of pushing a blob.

Differential Revision: https://phabricator.services.mozilla.com/D48842